# zeitstempel

./: Cargo.toml  README.md
src/: bitcoin.rs  main.rs  operations.rs  parser.rs  stamp.rs  upgrade.rs  verify.rs  writer.rs
tests/: verify_test.rs
